[gd_scene load_steps=6 format=3 uid="uid://dgke8xicrgg1f"]

[ext_resource type="Script" path="res://scenes/menus/menu_pause/menu_pause.gd" id="1_4o722"]
[ext_resource type="Theme" uid="uid://bsefhr7rfdet0" path="res://themes/button_normal.theme" id="2_c1sy7"]
[ext_resource type="Theme" uid="uid://diwlomdiy70p" path="res://themes/label_normal.theme" id="3_c1vi5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pxn0p"]
bg_color = Color(0, 0, 0, 0.588235)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 0.631373, 0.835294, 1)
border_blend = true

[sub_resource type="Theme" id="Theme_g314f"]
Panel/styles/panel = SubResource("StyleBoxFlat_pxn0p")

[node name="menu_pause" type="CanvasLayer" groups=["menu_pause"]]
process_mode = 3
script = ExtResource("1_4o722")

[node name="CanvasLayer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CanvasLayer"]
process_mode = 3
custom_minimum_size = Vector2(300, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_g314f")

[node name="ButtonResume" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -95.0
offset_right = 87.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_c1sy7")
theme_override_font_sizes/font_size = 30
text = "Resume"
icon_alignment = 1

[node name="ButtonMainMenu" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = 91.0
offset_right = 87.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_c1sy7")
theme_override_font_sizes/font_size = 30
text = "Main Menu"
icon_alignment = 1

[node name="ButtonRestart" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -3.0
offset_right = 87.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_c1sy7")
theme_override_font_sizes/font_size = 30
text = "Restart"
icon_alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -185.0
offset_bottom = -127.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_c1vi5")
theme_override_font_sizes/font_size = 40
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="CanvasLayer/Panel/ButtonResume" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/ButtonMainMenu" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/ButtonRestart" to="." method="_on_restart_button_pressed"]
